8266963: Reentrance condition for safepoint/handshake